scripts/nullaway/annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:102: error: [NullAway] dereferenced expression recognizerTags is @Nullable
        return recognizerTags.validate(test.getTags());
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:27: error: [NullAway] dereferenced expression expected is @Nullable
        if (!expected.equals(actual)) throw new AssertionError(message);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [NullAway] unboxing of a @Nullable value
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [NullAway] passing @Nullable parameter '(Boolean)suite.getContext().get("trueCondition")' where @NonNull is required
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:75: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return context;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:77: error: [NullAway] dereferenced expression testCreator is @Nullable
        return testCreator.getTest();
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields throwable (line 14), printer (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public XmlPrinter() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:85: error: [NullAway] dereferenced expression messsage is @Nullable
        if(!messsage.contains(":")) {
                    ^
    (see http://t.uber.com/nullaway )
8 errors
